[gd_scene load_steps=13 format=3 uid="uid://dqaft42frnum4"]

[ext_resource type="Script" path="res://scripts/vomit.gd" id="1_2yaff"]
[ext_resource type="Texture2D" uid="uid://cyphev15444hy" path="res://assets/enemies/Turret Zombie Vomit Shooting Animation Frames/Zombie-Tileset---_0475_Capa-476.png" id="1_xet5p"]
[ext_resource type="Texture2D" uid="uid://dw8csk4qdomh2" path="res://assets/enemies/Turret Zombie Vomit Shooting Animation Frames/Zombie-Tileset---_0469_Capa-470.png" id="2_1p2kt"]
[ext_resource type="Texture2D" uid="uid://d0fkdqypmltxk" path="res://assets/enemies/Turret Zombie Vomit Shooting Animation Frames/Zombie-Tileset---_0473_Capa-474.png" id="3_cno7r"]
[ext_resource type="Texture2D" uid="uid://kgpjppxnnjkq" path="res://assets/enemies/Turret Zombie Vomit Shooting Animation Frames/Zombie-Tileset---_0474_Capa-475.png" id="4_qfomx"]
[ext_resource type="Texture2D" uid="uid://o7ev1kcxmndf" path="res://assets/enemies/Turret Zombie Vomit Shooting Animation Frames/Zombie-Tileset---_0470_Capa-471.png" id="5_ip0ch"]
[ext_resource type="Texture2D" uid="uid://cklhfyxo6dlsc" path="res://assets/enemies/Turret Zombie Vomit Shooting Animation Frames/Zombie-Tileset---_0472_Capa-473.png" id="6_q3dit"]
[ext_resource type="Texture2D" uid="uid://qqi4i0fdf2a2" path="res://assets/enemies/Turret Zombie Vomit Shooting Animation Frames/Zombie-Tileset---_0471_Capa-472.png" id="7_surhg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a7i3l"]
size = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_0xqo5"]
resource_name = "collide"
length = 0.18
step = 0.01
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.18),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12, 0.16),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_1p2kt"), ExtResource("3_cno7r"), ExtResource("4_qfomx"), ExtResource("1_xet5p")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.12),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-8, 0), Vector2(-8, 0)]
}

[sub_resource type="Animation" id="Animation_xbwp7"]
resource_name = "idle"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("5_ip0ch"), ExtResource("6_q3dit"), ExtResource("7_surhg")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qmbxa"]
_data = {
"collide": SubResource("Animation_0xqo5"),
"idle": SubResource("Animation_xbwp7")
}

[node name="Vomit" type="Area2D"]
scale = Vector2(2, 2)
collision_layer = 8
collision_mask = 17
script = ExtResource("1_2yaff")
vomit_speed = 100.0
vomit_damage = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_a7i3l")

[node name="BulletSprite" type="Sprite2D" parent="."]
position = Vector2(-8, 0)
texture = ExtResource("2_1p2kt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="BulletSprite"]
libraries = {
"": SubResource("AnimationLibrary_qmbxa")
}
autoplay = "idle"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
